--- a/env.example
+++ b/env.example
@@ -1,6 +1,9 @@
-# API Configuration
-REACT_APP_API_URL=http://localhost:3001
+# API Configuration (.NET Backend)
+REACT_APP_API_URL=http://localhost:7175
 
 # App Configuration
 REACT_APP_NAME=Bank Center Credit Portal
 REACT_APP_VERSION=1.0.0
+
+# Development Settings
+NODE_ENV=development
