--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # API Configuration (.NET Backend)  
-REACT_APP_API_URL=https://188.244.115.175/api
+REACT_APP_API_URL=http://188.244.115.175/api
 
 # App Configuration
 REACT_APP_NAME=Bank Center Credit Portal
